--- a/styles.css
+++ b/styles.css
@@ -74,12 +74,8 @@ p {
     font-weight: 300;
 }
 
-#speed-slider-text, #data-slider-text {
+.slidecontainer {
     color: #fff;
-}
-
-.slider {
-    display: inline;
 }
 
 /* body {
